# ynab-monthly-report

./: .gitignore  MODULE.bazel  WORKSPACE
.eclipse/: .bazelproject
src/main/java/com/ynabmonthlyreport/: BUILD  Runner.java  Runner.kt
src/main/java/com/ynabmonthlyreport/email/: BUILD  SendEmailTask.kt
src/main/java/com/ynabmonthlyreport/model/: BUILD  Constants.kt  JsonConversionUtils.kt
src/main/java/com/ynabmonthlyreport/model/config/: BUILD  YnabMonthlyReportConfig.java  YnabMonthlyReportConfig.kt
src/main/java/com/ynabmonthlyreport/model/month/: BUILD  BudgetMonthData.java  BudgetMonthData.kt  CategoryData.java  CategoryData.kt
src/main/java/com/ynabmonthlyreport/model/transaction/: BUILD  SubtransactionData.java  SubtransactionData.kt  TransactionData.java  TransactionData.kt
src/main/java/com/ynabmonthlyreport/report/: BUILD  BaseReportGenerator.java  BaseReportGenerator.kt  MonthlySpendingReportGenerator.java  MonthlySpendingReportGenerator.kt  NoGoalReportGenerator.java  NoGoalReportGenerator.kt  NonMonthlySpendingReportGenerator.java  NonMonthlySpendingReportGenerator.kt  ReportAssembler.java  ReportAssembler.kt  SavingsReportGenerator.java  SavingsReportGenerator.kt
src/main/java/com/ynabmonthlyreport/scheduler/: BUILD  Scheduler.java  Scheduler.kt
src/main/java/com/ynabmonthlyreport/ynab/: BUILD  YnabFetcher.kt
src/main/resources/: BUILD
