module(
    name = "main",
    version = "",
)

bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
use_repo(maven, "maven")

maven.install(
    artifacts = [
        "com.fasterxml.jackson.core:jackson-annotations:2.14.0",
        "com.fasterxml.jackson.core:jackson-databind:2.15.3",
        "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.3",
        "com.sun.mail:javax.mail:1.6.2",
        "javax.annotation:javax.annotation-api:1.3.2",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
