module(
    name = "main",
    version = "",
)

bazel_dep(name = "rules_kotlin", version = "2.2.1")
bazel_dep(name = "rules_jvm_external", version = "6.9")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
use_repo(maven, "maven")

maven.install(
    artifacts = [
        "com.fasterxml.jackson.core:jackson-annotations:2.20",
        "com.sun.mail:javax.mail:1.6.2",
        "javax.annotation:javax.annotation-api:1.3.2",
        "tools.jackson.core:jackson-core:3.0.3",
        "tools.jackson.core:jackson-databind:3.0.3",
        "tools.jackson.module:jackson-module-kotlin:3.0.3",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
